--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "submodules/fused-ssim"]
 	path = submodules/fused-ssim
 	url = https://github.com/rahul-goel/fused-ssim.git
+[submodule "submodules/diff-gaussian-rasterizatio"]
+	path = submodules/diff-gaussian-rasterizatio
+	url = https://github.com/graphdeco-inria/diff-gaussian-rasterization.git
