Add diff-surfel-rasterization submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 	path = submodules/diff-gaussian-rasterization
 	url = https://github.com/graphdeco-inria/diff-gaussian-rasterization.git
 	branch = dr_aa
+[submodule "submodules/diff-surfel-rasterization"]
+	path = submodules/diff-surfel-rasterization
+	url = https://github.com/hbb1/diff-surfel-rasterization.git
